--- a/classification/openscad-ukol.adoc
+++ b/classification/openscad-ukol.adoc
@@ -1,12 +1,15 @@
-====== OpenSCAD: Domácí úkol ZS 2017/2018 ======
+= OpenSCAD: Domácí úkol ZS 2017/2018 
+:imagesdir: ../media/classification
 
-<note important>
+
+[IMPORTANT]
+====
 BETA verze Domacího úkolu
 
 Můžete začít pracovat.
 
-[[https://github.com/3DprintFIT/B171HW-Assignment|ZDE]]
+https://github.com/3DprintFIT/B171HW-Assignment[ZDE]
 
-</note>
+====
 
-Domácí úkoly ze semestrů minulých můžete vidět v [[classification:archive:start|archívu]].
+Domácí úkoly ze semestrů minulých můžete vidět v xref:archive/index#[archívu].
