--- a/classification/semestralka.adoc
+++ b/classification/semestralka.adoc
@@ -1,3 +1,5 @@
-====== Semestrální práce ZS 2017/2018 ======
+= Semestrální práce ZS 2017/2018 
+:imagesdir: ../media/classification
 
-Zadání semestrálky najdete na [[https://github.com/3DprintFIT/B171CW-Assignment|GitHubu]].
+
+Zadání semestrálky najdete na https://github.com/3DprintFIT/B171CW-Assignment[GitHubu].
